apps/simpleapp/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: demo-service
  namespace: default

spec:
  selector:
    app: demo

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
